--- a/report/main.tex
+++ b/report/main.tex
@@ -30,7 +30,7 @@
     \renewcommand{\footrulewidth}{0.4pt} % Footnote rule
 \usepackage{float} % Utilization of [H] in figures
 \usepackage{graphicx} % Figures in LaTeX
-\usepackage[colorlinks = true, plainpages = true, linkcolor = istblue, urlcolor = istblue, citecolor = istblue, anchorcolor = istblue]{hyperref}
+\usepackage[colorlinks = true, plainpages = true, linkcolor = novablue, urlcolor = novablue, citecolor = novablue, anchorcolor = novablue]{hyperref}
 \usepackage{indentfirst} % First paragraph
 \usepackage[super]{nth} % Superscripts
 \usepackage{siunitx} % SI units
@@ -76,9 +76,8 @@
 \renewcommand{\appendixpagename}{\LARGE Appendices}
 
 % Colors
-\definecolor{istblue}{RGB}{3, 171, 230}
-\definecolor{dkgreen}{rgb}{0,0.6,0}
-\definecolor{gray}{rgb}{0.5,0.5,0.5}
+\definecolor{novablue}{RGB}{0, 101, 189}
+\definecolor{dkgreen}{rgb}{0,0.6,0} 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %                                 Document                             %
@@ -98,7 +97,7 @@
     \textsc{\Huge MEEC/MIEEC}\\[2.5cm]
     \textsc{\LARGE Eletrónica para Micro-Sistemas}\\[2.0cm]
     \HRule\\[0.4cm]
-    {\large \bf { Laboratório 1 Sensor de Temperatura } [\texttt{EN}]}\\[0.2cm]
+    {\large \bf { Laboratório 1 Sensor de Temperatura } [\texttt{PT}]}\\[0.2cm]
     \HRule\\[1.5cm]
 \end{center}
 
@@ -150,32 +149,44 @@
 
 \newpage
 
-Para usar equacao Steinhart-Hart $\frac{1}{T} = A + B\cdot \ln(R) + C\cdot [\ln(R)]^3$, precisamos de usar 3 pontos para encontrar as constantes $A$, $B$ e $C$.
+\section{Dimensionamento}
+\subsection{NTC}
 
+Para puder dimensionar o AFE do NTC primeiro é necessario definir o intrevalo de temperaturas em que o circuito irá operar.
+Foi então decidido que seria adequado um temperatura $T \in [ 10^{\circ}; 40^{\circ} ]$.
+E pelo datasheet do NTC foi obtido o intrevalo da sua resistencia $R_{NTC} \in [~5,282k~;~19,98k~]$   
+
+Para usar equacao Steinhart-Hart $\frac{1}{T} = A + B\cdot \ln(R) + C\cdot [\ln(R)]^3$, precisamos de usar 3 pontos para encontrar as constantes $A$, $B$ e $C$.
+~
 $R(T) = R_{NTC} $ onde $T$ é a temperatura em kelvin e $R_{NTC}$ é o valor da resistencia do thermistor \textit{NTC}
 
 \begin{equation}
   \left\{\begin{array}{@{}l@{}}
-    R( 283.15 ) = 1.998\cdot 10^4 ~\Omega \\
-    R( 298.15 ) = 10^4 ~\Omega\\
-    R( 313.15 ) = 0.5282 \cdot 10^4 ~\Omega\\
+    R( 283,15 ) = 1,998\cdot 10^4 ~\Omega \\
+    R( 298,15 ) = 10^4 ~\Omega\\
+    R( 313,15 ) = 0,5282 \cdot 10^4 ~\Omega\\
   
     \end{array}\right.\
 \end{equation}
 
 \begin{equation}
   \left\{\begin{array}{@{}l@{}}
-     A = 1.2 \cdot 10^{-3}\\
-     B = 2.1 \cdot 10^{-4}\\
-     C = 1.3 \cdot 10^{-7}\\
+     A = 1,2 \cdot 10^{-3}\\
+     B = 2,1 \cdot 10^{-4}\\
+     C = 1,3 \cdot 10^{-7}\\
   
     \end{array}\right.\
 \end{equation}
 
 
 
-\section{SECCAO}
-\lipsum
+\subsection{LM35}
+\subsection{DS18B20 ??(Este tem Dimensionamento?)}
+\subsection{Relé de saída }
+
+
+\section{ Simulação }
+\section{ Implementação }
 
     \begin{figure}[H]
         \centering
