--- a/report/main.tex
+++ b/report/main.tex
@@ -153,12 +153,17 @@
 
 \newpage
 
-\section{Intoduction}
+\section{Introduction}
 explain the requirements and the main objectives of the project
+\textcolor{red}{
+    Se calhar dizer aqui quais sao as metricas por onde podemos avaliar a nossa solucao
+    Linearidade de output para conseguir aproveitar melhor a resolucao do adc 
+    Consumo
+    erro}
 
     \begin{figure}[H] 
         \centering
-        \includegraphics*[scale = 0.5]{system-design.png}
+        \includegraphics*[scale = 0.5]{images/system-design.png}
         \caption{Temperature sensing system with 3 three types of sensors.}
         \label{wrap-fig:1}
     \end{figure}
@@ -167,37 +172,115 @@ explain the requirements and the main objectives of the project
 
 \section{Temperature Sensors}
 \subsection{NTC - Negative Temperature Coefficient}
+
 \subsection{LM35 - Precision Centigrade Temperature Sensor}
+
+
+     \begin{figure}[H] 
+        \centering
+        \includegraphics*[scale = 0.2]{images/AFELM35.png}
+        \caption{AFE for the LM35 sensor.}
+        \label{wrap-fig:1}
+    \end{figure}
+
+   \begin{figure}[H] 
+        \centering
+        \includegraphics*[scale = 0.5]{images/ErroTempLm35AFE.png}
+        \caption{AFE error curve.}
+        \label{wrap-fig:1}
+    \end{figure}
+
+
 \subsection{DS18B20 - Digital Thermometer}
 
 \section{System Design}
 \subsection{Analog FrontEnd (AFE) NTC}
-Para puder dimensionar o AFE do NTC primeiro é necessario definir o intrevalo de temperaturas em que o circuito irá operar.
-Foi então decidido que seria adequado um temperatura $T \in [ 10^{\circ}; 40^{\circ} ]$.
-E pelo datasheet do NTC foi obtido o intrevalo da sua resistencia $R_{NTC} \in [~5,282k~;~19,98k~]$   
 
-Para usar equacao Steinhart-Hart $\frac{1}{T} = A + B\cdot \ln(R) + C\cdot [\ln(R)]^3$, precisamos de usar 3 pontos para encontrar as constantes $A$, $B$ e $C$.
-~
-$R(T) = R_{NTC} $ onde $T$ é a temperatura em kelvin e $R_{NTC}$ é o valor da resistencia do thermistor \textit{NTC}
 
-\begin{equation}
-  \left\{\begin{array}{@{}l@{}}
-    R( 283,15 ) = 1,998\cdot 10^4 ~\Omega \\
-    R( 298,15 ) = 10^4 ~\Omega\\
-    R( 313,15 ) = 0,5282 \cdot 10^4 ~\Omega\\
-  
-    \end{array}\right.\
-\end{equation}
+    \textcolor{red}{A parte onde definimos o intervalo de temperatura nao devia estar aqui pq é para todos os circuitos}
 
-\begin{equation}
-  \left\{\begin{array}{@{}l@{}}
-     A = 1,2 \cdot 10^{-3}\\
-     B = 2,1 \cdot 10^{-4}\\
-     C = 1,3 \cdot 10^{-7}\\
-  
-    \end{array}\right.\
-\end{equation}
+
+    In order to design the \textit{NTF} \textit{AFE} first it's necessary to define the temperature interval
+    in which this circuit will work, thus it was define as $T \in [ 10^{\circ}; 40^{\circ} ]$. 
+    Through the \textit{NTC}'s datasheet the interval of its resistance values is $R_{NTC} \in [~5,282k~;~19,98k~]$
+
+    For an accurate reading of the temperature it was used the 
+    \hyperref[eq:1]{ \textit{Steinhart-Hart} equation}.
+
+    \begin{equation} \label{eq:1}
+    \frac{1}{T} = A + B\cdot \ln(R_{NTC}) + C\cdot [\ln(R_{NTC})]^3
+    \end{equation}
+
+    In order to find the parameters $A$, $B$ and $C$, its necessary to use 3 points from the datasheet. 
+    The points chosen were the two extremes and the middles point.
+
+    \begin{equation}
+        \begin{cases}
+        
+            R( 283,15 ) = 1,998\cdot 10^4 ~\Omega \\
+            R( 298,15 ) = 10^4 ~\Omega\\
+            R( 313,15 ) = 0,5282 \cdot 10^4 ~\Omega\\
+        
+        \end{cases}
+        \Leftrightarrow
+        \begin{cases}
+            A = 1,2 \cdot 10^{-3}\\
+            B = 2,1 \cdot 10^{-4}\\
+            C = 1,3 \cdot 10^{-7}\\
+        
+        \end{cases}
+    \end{equation}
+
+    \textcolor{red}{ Para poder dimensionar o AFE do NTC primeiro é necessario definir o intrevalo de temperaturas em que o circuito irá operar.
+    Foi então decidido que seria adequado um temperatura $T \in [ 10^{\circ}; 40^{\circ} ]$.
+    E pelo datasheet do NTC foi obtido o intrevalo da sua resistencia $R_{NTC} \in [~5,282k~;~19,98k~]$}
+
+    \textcolor{red}{Para usar equacao Steinhart-Hart $\frac{1}{T} = A + B\cdot \ln(R) + C\cdot [\ln(R)]^3$, precisamos de usar 3 pontos para encontrar as constantes $A$, $B$ e $C$.
+    ~
+    $R(T) = R_{NTC} $ onde $T$ é a temperatura em kelvin e $R_{NTC}$ é o valor da resistencia do thermistor \textit{NTC}
+    }
+
+    The simplest way to convert the resistance to voltage, is to use a voltage divider circuit.
+
+
+   \begin{figure}[H] 
+        \centering
+        \includegraphics*[scale = 0.25]{images/voltagedivider.png}
+        \caption{NTC voltage divider.}
+        \label{wrap-fig:1}
+    \end{figure}
+
+    This approach  has a few problems: 
+
+    $\cdot$ The output resistance is really high $R\parallel NTC$, 
+
+    $\cdot$ The output voltage is higly non linear, which is a problem because this way some \textit{ADC} resolution is lost.
+
+    The first problem is solved through a buffer at the entrance of the \textit{AFE}, 
+    and the second is somewhat mitigated by using a resistor $R >> NTC$, 
+    because, as seen in the equation a value for $R$ will lead to small variation in the output voltage, making it closer to a straight curve. 
+    
+    \textcolor{red}{aqui acho que se vê pela segunda derivada, quanto menor a segunda derivada mais reta é a curva certo ?? }
+
+    \begin{comment}
+    $$\frac{\partial}{\partial NTC}\frac{NTC}{R+NTC} = \frac{R}{(R+NTC)^2}$$  
+    \end{comment}
+
+    With $R=...$ the output signal is $V_{out} \in [...]$. 
+    But the \textit{ADC} as resolution of $12$ bits and a voltage range of $3.3V$, meaning that to have the best resolution possible the signal needs an offset and a gain of $...$ and $...$ respectively.
+    This is achieved using a differential amplifier.
+    
+    
+
 \subsection{LM35}
+
+    This integrated-circuit temperature sensor,generates an output
+voltage linearly proportional to the Centigrade temperature
+
+$$V_{out} = 10^{-2}\cdot T$$
+
+Thus in the specified conditions $V_{out}\in[0.1;0.4]$, as done in the last section we will be using a differential amplifier to fit this interval in the \textit{ADC}'s range.
+
 \subsection{DS18B20 ??(Este tem Dimensionamento?)}
 \subsection{Relé de saída }
 
