--- a/report/main.tex
+++ b/report/main.tex
@@ -98,7 +98,7 @@
     \textsc{\Huge MEEC/MIEEC}\\[2.5cm]
     \textsc{\LARGE Electronics for Micro-Systems}\\[2.0cm]
     \HRule\\[0.4cm]
-    {\large \bf { Lab\#1 \linebreak A Temperature Meter
+    {\large \bf { Lab\#1 P1\linebreak A Temperature Meter
     System with 3 Sensors,
     Relay and GUI
     }}\\[0.2cm] % [\texttt{EN}]
@@ -113,14 +113,14 @@
     \begin{minipage}{0.5\textwidth}
         \begin{flushleft}
             Martim Duarte Agostinho (70392)\\
-            Lorem Ipsum (\texttt{ISTID} $\in \mathbb{Z}^+$)\\
+            Francisco Simões Coelho Sá da Costa   (\texttt{70386})\\
             Sofia Margarida Mafra Dias Inácio (58079)\\
         \end{flushleft}
     \end{minipage}%
     \begin{minipage}{0.5\textwidth}
         \begin{flushright}
             \href{mailto:md.agostinho@campus.fct.unl.pt}{\texttt{md.agostinho@campus.fct.unl.pt}}\\
-            \href{mailto:lorem.ipsum@campus.fct.unl.pt}{\texttt{lorem.ipsum@campus.fct.unl.pt}}\\
+            \href{mailto:lorem.ipsum@campus.fct.unl.pt}{\texttt{fsc.costa@campus.fct.unl.pt}}\\
             \href{mailto:lorem.ipsum@campus.fct.unl.pt}{\texttt{sm.inacio@campus.fct.unl.pt}}
         \end{flushright}
     \end{minipage}
