--- a/report/main.tex
+++ b/report/main.tex
@@ -120,8 +120,8 @@
     \begin{minipage}{0.5\textwidth}
         \begin{flushright}
             \href{mailto:md.agostinho@campus.fct.unl.pt}{\texttt{md.agostinho@campus.fct.unl.pt}}\\
-            \href{mailto:lorem.ipsum@campus.fct.unl.pt}{\texttt{fsc.costa@campus.fct.unl.pt}}\\
-            \href{mailto:lorem.ipsum@campus.fct.unl.pt}{\texttt{sm.inacio@campus.fct.unl.pt}}
+            \href{mailto:fsc.costa@campus.fct.unl.pt}{\texttt{fsc.costa@campus.fct.unl.pt}}\\
+            \href{mailto:sm.inacio@campus.fct.unl.pt}{\texttt{sm.inacio@campus.fct.unl.pt}}
         \end{flushright}
     \end{minipage}
 \end{center}
@@ -257,19 +257,64 @@ explain the requirements and the main objectives of the project
     $\cdot$ The output voltage is higly non linear, which is a problem because this way some \textit{ADC} resolution is lost.
 
     The first problem is solved through a buffer at the entrance of the \textit{AFE}, 
-    and the second is somewhat mitigated by using a resistor $R >> NTC$, 
-    because, as seen in the equation a value for $R$ will lead to small variation in the output voltage, making it closer to a straight curve. 
+    and the second is somewhat mitigated by using a resistor value around $8k \Omega$.
+    To achieve this value it was used the beta model for the $NTC$ and through a python script,
+    the resistor value was iterated until an almost linear output was achieved. 
     
-    \textcolor{red}{aqui acho que se vê pela segunda derivada, quanto menor a segunda derivada mais reta é a curva certo ?? }
-
-    \begin{comment}
-    $$\frac{\partial}{\partial NTC}\frac{NTC}{R+NTC} = \frac{R}{(R+NTC)^2}$$  
-    \end{comment}
-
-    With $R=...$ the output signal is $V_{out} \in [...]$. 
-    But the \textit{ADC} as resolution of $12$ bits and a voltage range of $3.3V$, meaning that to have the best resolution possible the signal needs an offset and a gain of $...$ and $...$ respectively.
-    This is achieved using a differential amplifier.
+    \newpage
     
+    \begin{figure}[h]
+        \centering
+        \begin{subfigure}{0.45\textwidth}
+            \centering
+            \includegraphics[width=\textwidth]{images/VoutPorTemp.png}
+            \caption{ $8K\Omega$ }
+        \end{subfigure}\hfill
+        \begin{subfigure}{0.45\textwidth}
+            \centering
+            \includegraphics[width=\textwidth]{images/VoutPorTemp100k.png}
+            \caption{$100K\Omega$}
+        \end{subfigure}
+        \caption{Output Voltage vs Temperature}
+    \end{figure}
+
+
+    With $R=8k$ the output signal is $V_{out} \in [1.31V;2.36V]$. 
+    But the \textit{ADC} as resolution of $12$ bits and a voltage range of $3.3V$, meaning that to have the best resolution possible the signal needs an offset and a gain of $2.87$ and $-1.75$ respectively. 
+    It's important to note that a $0.1V$ margin was added to $V_{out}$ in order to ensure that the \textit{AFE} works properly in the specified range.
+    This gain and offset was achieved through the following topology.
+    
+    \begin{figure}[H] 
+        \centering
+        \includegraphics*[scale = 0.25]{images/AFENTC.png}
+        \caption{NTC's AFE topology}
+        \label{wrap-fig:1}
+    \end{figure}
+
+    \textcolor{red}{Nao esquecer de fazer referencia ao codigo funcao AfeNtc()}
+
+    As already specified the $R_3$ value is $8K~\Omega$ and for the purpose circuit dimensioning the circuit 
+    the positive node of the opamp will be treated as a variable $V_p$.
+
+    Using python the circuit function $V_{out}(V_p)$:
+    
+    \begin{equation}
+        V_{out} = V_p\left[ 1 + R_f\cdot\left(\frac{1}{R_1} + \frac{1}{R_2}\right) \right] - V_{cc}\cdot\frac{R_f}{R_1}
+    \end{equation}
+
+    Now it's clear to see what part of the equation is responsible for the circuit gain and offset.
+    
+    \begin{equation}
+        \begin{cases}
+            V_{offset} = - V_{cc}\cdot\frac{R_f}{R_1}\\
+            G = \left[ 1 + R_f\cdot\left(\frac{1}{R_1} + \frac{1}{R_2}\right) \right]\\
+        \end{cases}
+    \end{equation}
+
+    Setting $R_f = 10K$ the values that satisfy the equation system are $R_1 = 9348 \Omega$ and $R_2 = 11760 \Omega$.
+    In the simulation this values are a bit too close to the limits so in order to have better margins and to use the available resistors
+    the final values are  $R_1 = 8.2K \Omega$ and $R_2 = 12K \Omega$.
+
     
 
 \subsection{LM35}
