--- a/report/main.tex
+++ b/report/main.tex
@@ -171,6 +171,7 @@ explain the requirements and the main objectives of the project
 \pagebreak
 
 \section{Temperature Sensors}
+For the purpose of implementing the system described in the requirements of the labwork, the temperature sensors described below were used. This section will describe the intrinsic characteristics of each sensor and why they were chosen for the system design presented in the following sections. 
 \subsection{NTC - Negative Temperature Coefficient}
 
 \subsection{LM35 - Precision Centigrade Temperature Sensor}
