--- a/report/main.tex
+++ b/report/main.tex
@@ -171,7 +171,6 @@ explain the requirements and the main objectives of the project
 \pagebreak
 
 \section{Temperature Sensors}
-For the purpose of implementing the system described in the requirements of the labwork, the temperature sensors described below were used. This section will describe the intrinsic characteristics of each sensor and why they were chosen for the system design presented in the following sections. 
 \subsection{NTC - Negative Temperature Coefficient}
 
 \subsection{LM35 - Precision Centigrade Temperature Sensor}
@@ -197,7 +196,7 @@ For the purpose of implementing the system described in the requirements of the 
     \end{equation}
 
     In order to find the parameters $A$, $B$ and $C$, its necessary to use 3 points from the datasheet. 
-    The points chosen were the two extremes and the middles point.
+    The points chosen were the two extremes and the middle point.
 
     \begin{equation}
         \begin{cases}
@@ -216,15 +215,6 @@ For the purpose of implementing the system described in the requirements of the 
         \end{cases}
     \end{equation}
 
-    \textcolor{red}{ Para poder dimensionar o AFE do NTC primeiro é necessario definir o intrevalo de temperaturas em que o circuito irá operar.
-    Foi então decidido que seria adequado um temperatura $T \in [ 10^{\circ}; 40^{\circ} ]$.
-    E pelo datasheet do NTC foi obtido o intrevalo da sua resistencia $R_{NTC} \in [~5,282k~;~19,98k~]$}
-
-    \textcolor{red}{Para usar equacao Steinhart-Hart $\frac{1}{T} = A + B\cdot \ln(R) + C\cdot [\ln(R)]^3$, precisamos de usar 3 pontos para encontrar as constantes $A$, $B$ e $C$.
-    ~
-    $R(T) = R_{NTC} $ onde $T$ é a temperatura em kelvin e $R_{NTC}$ é o valor da resistencia do thermistor \textit{NTC}
-    }
-
     The simplest way to convert the resistance to voltage, is to use a voltage divider circuit.
 
 
@@ -242,11 +232,10 @@ For the purpose of implementing the system described in the requirements of the 
     $\cdot$ The output voltage is highly non linear, which is a problem because this way some \textit{ADC} resolution is lost.
 
     The first problem is solved through a buffer at the entrance of the \textit{AFE}, 
-    and the second is somewhat mitigated by using a resistor value around $8k \Omega$.
+    and the second is somewhat mitigated by using a resistor value around $8K \Omega$.
     To achieve this value it was used the beta model for the $NTC$ and through a python script,
     the resistor value was iterated until an almost linear output was achieved. 
-    
-    \newpage
+    See NtcTempToVoltage() function in the attached python script.  
     
     \begin{figure}[h]
         \centering
@@ -267,6 +256,19 @@ For the purpose of implementing the system described in the requirements of the 
     With $R=8k$ the output signal is $V_{out} \in [1.31V;2.36V]$. 
     But the \textit{ADC} as resolution of $12$ bits and a voltage range of $3.3V$, meaning that to have the best resolution possible the signal needs an offset and a gain of $2.87$ and $-1.75$ respectively. 
     It's important to note that a $0.1V$ margin was added to $V_{out}$ in order to ensure that the \textit{AFE} works properly in the specified range.
+    
+    The most obvious way to achieve this values would be with a differential amplifier, 
+    as seen in the following circuit.
+
+     \begin{figure}[H] 
+        \centering
+        \includegraphics*[scale = 0.25]{images/AFENTCDiffAmp.png}
+        \caption{NTC's AFE Differential Amplifier}
+        \label{wrap-fig:1}
+    \end{figure}
+
+    Although in the simulation this yields the expected result buy using the 
+    
     This gain and offset was achieved through the following topology.
     
     \begin{figure}[H] 
@@ -333,13 +335,13 @@ For the purpose of implementing the system described in the requirements of the 
 
     This way the input impedance is high, only one OpAmp and two resistors are used.
     But this comes with the cost of lost resolution. With a gain of $8$ $V_{out}\in[0.8V,3.2V]$
-    $0.8V$ of range in the \textit{ADC} are lost. 
+    $0.8V$ or $24\%$ of range in the \textit{ADC} are lost.
 
 \subsection{Output Relay }
     
     Lastly the \textit{MCU} will turn on and off a fan. For this purpose 
     a relay will open and close the fan circuit. Because the \textit{MCU's I/O} 
-    can drive the relay a \textit{NPN} transistor is use to get enough current.
+    can't drive the relay a \textit{NPN} transistor is use to get enough current.
     Thus the following circuit also needs to be dimensioned. It's important to note
     that the diode is needed to protect the circuit.
     
@@ -356,43 +358,64 @@ For the purpose of implementing the system described in the requirements of the 
     \end{equation}
 
 
+\newpage
 \section{Simulations}
 \subsection{NTC}
     
     For the purpose of testing the following circuit was designed.
-    At first with linear voltage supply.
+    At first with linear voltage supply since as seen in \hyperref{AFENTC}{NTC's AFE} section, this voltage is almost linear.
 
     \begin{figure}[H] 
         \centering
-        \includegraphics*[scale = 0.4]{images/RelayDrive.png}
-        \caption{Relay circuit.}
+        \includegraphics*[scale = 0.45]{images/NTCLinearTb.png}
+        \caption{Linear supply NTC test circuit.}
         \label{wrap-fig:1}
     \end{figure}
     Producing the following results.
  
     \begin{figure}[H] 
         \centering
-        \includegraphics*[scale = 0.4]{images/RelayDrive.png}
-        \caption{Relay circuit.}
+        \includegraphics*[scale = 0.3]{images/NTCLinearRes.png}
+        \caption{Linear supply NTC test results.}
         \label{wrap-fig:1}
     \end{figure}
 
     Confirming the effectiveness of the \textit{AFE} circuit a more realistic
-    circuit was tested.
+    circuit was then tested.
 
     \begin{figure}[H] 
         \centering
-        \includegraphics*[scale = 0.4]{images/RelayDrive.png}
-        \caption{Relay circuit.}
+        \includegraphics*[scale = 0.45]{images/NTCRealTb.png}
+        \caption{Realistic NTC test circuit.}
+        \label{wrap-fig:1}
+    \end{figure}
+    
+    With the following results.
+    
+    \begin{figure}[H] 
+        \centering
+        \includegraphics*[scale = 0.3]{images/NTCRealRes.png}
+        \caption{Realistic NTC test results.}
         \label{wrap-fig:1}
     \end{figure}
 
+    \textcolor{red}{Nao gostei de como ficou a frase }
+    
+    Comparing both results the difference is minimal.
     Confirming that the output is nearly linear in relation to the temperature variation.
+    
+    \begin{figure}[H] 
+        \centering
+        \includegraphics*[scale = 0.3]{images/NTCRealLinearComp.png}
+        \caption{NTC Linear and Realistic results comparison.}
+        \label{wrap-fig:1}
+    \end{figure}
+
 
 \subsection{LM35}
 
     For this sensor the simulation is straight forward, since the output is linear and proportional to the temperature, 
-    it can be simulated with variable voltage supply. 
+    it can be simulated with a variable voltage supply. 
 
     \begin{figure}[H] 
         \centering
@@ -401,7 +424,7 @@ For the purpose of implementing the system described in the requirements of the 
         \label{wrap-fig:1}
     \end{figure}
     
-    Giving the following results.
+    Giving the following results, confirming that this approach works properly. 
     
     \begin{figure}[H] 
         \centering
